# callbot

./: .env.local.example  .gitattributes  .gitignore  .prettierignore  MIGRATION.md  README.md  STRIPE_PRICES_REFERENCE.env  ecosystem.config.cjs  ecosystem.config.js  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.js  package-lock.json  package.json  sentry.server.config.ts  server.js  tsconfig.json  tsconfig.server.json  vercel.json  vitest.config.ts
backend/: .env.example  README.md  config.py  google_oauth_scopes.py  main.py  push.py  pyproject.toml  quota.py  requirements.txt  start.sh  stripe_plans.py  supabase_client.py  voice_presets.py
backend/api/: admin_billing.py  appointment_followup.py  auth.py  google_routes.py  mobile_routes.py  outbound.py  stripe_routes.py
backend/billing/: __init__.py  invoicing.py  ledger.py  stripe_sync.py  subscriptions.py
backend/calendar_api/: __init__.py  _availability.py  _booking.py  _parsing.py  calendar_handler.py
backend/communication/: __init__.py  ensure.py  setup_summary.py  sms_onboarding.py  whatsapp_onboarding.py
backend/cron/: __init__.py  reconcile_usage.py  usage_aggregation.py  usage_alerts.py  usage_billing.py
backend/prompts/: __init__.py  builder.py  fetch.py
backend/scheduling/: __init__.py  engine.py
backend/telnyx/: __init__.py  cdr_webhook.py  payload_utils.py  provision.py  receptionist_lookup.py  recording_download.py  sms.py  sms_booking.py  sms_customer_identity.py  sms_delivery_registry.py  sms_webhook.py  ten_dlc.py  voice_webhook.py  voice_webhook_verify.py  (+2 more)
(+493 files in other folders)
